unpackaged/main/default/objects/Account/fields/DPBC_Date__c.field-meta.xml
<CustomField>
    <fullName>DPBC_Date__c</fullName>
    <description>Data Point Bar Code Date</description>
    <label>DPBC Date</label>
    <type>Date</type>
</CustomField>