unpackaged/main/default/objects/Account/fields/Driver_s_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License__c</fullName>
    <label>Driver’s License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>