unpackaged/main/default/objects/Account/fields/Due_Diligence_Strategic_Partner_Review__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Strategic_Partner_Review__c</fullName>
    <description>Field meant to track when due diligence is performed on strategic partner.</description>
    <inlineHelpText>The date shown shows when future due diligence reviews are done for the strategic partner.</inlineHelpText>
    <label>Due Diligence Strategic Partner Review</label>
    <type>Date</type>
</CustomField>