unpackaged/main/default/objects/Account/fields/EF_Qualification__c.field-meta.xml
<CustomField>
    <fullName>EF_Qualification__c</fullName>
    <description>This field was created to replace Status Lease and Lease Status Reason as the primary picklist for qualification status. Consolidates options and removes need for dependent picklist. SD-5788</description>
    <label>EF Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualification_Status</valueSetName>
    </valueSet>
</CustomField>