unpackaged/main/default/objects/Account/fields/Employer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_ID_Number__c</fullName>
    <externalId>true</externalId>
    <label>Employer ID Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>