unpackaged/main/default/objects/Account/fields/Equipment_Condition__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Condition__c</fullName>
    <description>This field will indicate if the equipment that the customer is planning on purchasing is new or used</description>
    <inlineHelpText>This field will indicate if the equipment that the customer is planning on purchasing is new or used</inlineHelpText>
    <label>Equipment Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>