unpackaged/main/default/objects/Account/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <description>SDR field to capture Equipment Cost.</description>
    <inlineHelpText>SDR field to capture Equipment Cost.</inlineHelpText>
    <label>Equipment Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>