unpackaged/main/default/objects/Account/fields/Exclusivity_Period__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Period__c</fullName>
    <description>The exclusivity period for the Lender, expressed in days. Referenced in Exclusivity formula on Opportunity.</description>
    <inlineHelpText>The exclusivity period for the Lender, expressed in days.</inlineHelpText>
    <label>Exclusivity Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>