unpackaged/main/default/objects/Account/fields/External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Id__c</fullName>
    <description>The Account/Customer ID provided by an external system. Ex: QuickBridge customer ID maps to this field.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Account/Customer ID provided by an external system. Ex: QuickBridge customer ID maps to this field.</inlineHelpText>
    <label>External Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>