unpackaged/main/default/objects/Account/fields/Facility_Fax__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fax__c</fullName>
    <description>The fax number of the landlord/company that owns the facility that the business is located at.</description>
    <inlineHelpText>Enter the fax number of the landlord/company that owns the facility that the business is located at.</inlineHelpText>
    <label>Facility Fax</label>
    <type>Phone</type>
</CustomField>