unpackaged/main/default/objects/Account/fields/Facility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Facility_Phone__c</fullName>
    <description>The phone number for the landlord of the facility that the business is located at.</description>
    <inlineHelpText>Enter the phone number for the landlord of the facility that the business is located at.</inlineHelpText>
    <label>Facility Phone</label>
    <type>Phone</type>
</CustomField>