unpackaged/main/default/objects/Account/fields/Facility_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Start_Date__c</fullName>
    <description>The date that the customer started renting/leasing the business location.</description>
    <inlineHelpText>The date that the customer started renting/leasing the business location.</inlineHelpText>
    <label>Facility Start Date</label>
    <type>Date</type>
</CustomField>