unpackaged/main/default/objects/Account/fields/Facility_Term__c.field-meta.xml
<CustomField>
    <fullName>Facility_Term__c</fullName>
    <description>The term of the lease/rental of the facility that the business is located at.</description>
    <inlineHelpText>Enter the term of the lease/rental of the facility that the business is located at.</inlineHelpText>
    <label>Facility Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>