unpackaged/main/default/objects/Account/fields/Fed_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_ID__c</fullName>
    <description>The federal Tax ID of the account</description>
    <externalId>true</externalId>
    <inlineHelpText>The federal Tax ID of the account</inlineHelpText>
    <label>Fed Tax ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>