unpackaged/main/default/objects/Account/fields/Fed_Tax_ID_Hashed__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_ID_Hashed__c</fullName>
    <label>Fed Tax ID Hashed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>