unpackaged/main/default/objects/Account/fields/Finance_Hold__c.field-meta.xml
<CustomField>
    <fullName>Finance_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Box Checked Account placed on Finance Hold</description>
    <inlineHelpText>Select Box Checked Account placed on Finance Hold</inlineHelpText>
    <label>Finance Hold</label>
    <type>Checkbox</type>
</CustomField>