unpackaged/main/default/objects/Account/fields/First_Match_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Match_DateTime__c</fullName>
    <label>First Match DateTime</label>
    <summarizedField>Matched_Lender__c.First_Lender_Match_DateTime__c</summarizedField>
    <summaryForeignKey>Matched_Lender__c.Customer_Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>