unpackaged/main/default/objects/Account/fields/FPC_Rep_Lease__c.field-meta.xml
<CustomField>
    <fullName>FPC_Rep_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NF Rep Lease</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>