unpackaged/main/default/objects/Account/fields/FPC_Rep_MCA__c.field-meta.xml
<CustomField>
    <fullName>FPC_Rep_MCA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will allow a MCA rep to work a lease lead for 90 Days or until a MCA opportunity is closed. This field will help support marketing the MCA product to the assigned lease database.</description>
    <inlineHelpText>Populate this field if you are a BFC and a Lease AE is the account owner.</inlineHelpText>
    <label>NF Rep WC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>