unpackaged/main/default/objects/Account/fields/Funded_by_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Funded_by_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a customer that has funded a deal did so with the current Account Owner.</description>
    <inlineHelpText>This field will indicate if a customer that has funded a deal did so with the current Account Owner.</inlineHelpText>
    <label>Funded by Account Owner</label>
    <type>Checkbox</type>
</CustomField>