unpackaged/main/default/objects/Account/fields/Funded_Opportunity_with_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Funded_Opportunity_with_Open_Balance__c</fullName>
    <description>Count Funded Opportunity with Open Balance (PD-2370)</description>
    <label>Funded Opportunity with Open Balance</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Funded</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Internal_Funding_Status__c</field>
        <operation>equals</operation>
        <value>Funded</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Balance_Remaining_Percent__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Balance_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>