unpackaged/main/default/objects/Account/fields/Has_SSN__c.field-meta.xml
<CustomField>
    <fullName>Has_SSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has SSN</label>
    <type>Checkbox</type>
</CustomField>