unpackaged/main/default/objects/Account/fields/Hot_Note__c.field-meta.xml
<CustomField>
    <fullName>Hot_Note__c</fullName>
    <description>Lease Hot Notes</description>
    <label>Hot Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>