unpackaged/main/default/objects/Account/fields/Hot_Note_Alt__c.field-meta.xml
<CustomField>
    <fullName>Hot_Note_Alt__c</fullName>
    <description>A memo field ised by Alt Product staff for the account.</description>
    <inlineHelpText>A memo field ised by Alt Product staff for the account.</inlineHelpText>
    <label>Hot Note Alt</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>