unpackaged/main/default/objects/Account/fields/I9_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>I9_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I9 Form Complete</label>
    <type>Checkbox</type>
</CustomField>