unpackaged/main/default/objects/Account/fields/Initial_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Initial_Product_Interest__c</fullName>
    <description>This field will capture the customers initial product interest.</description>
    <inlineHelpText>This field will capture the customers initial product interest.</inlineHelpText>
    <label>Initial Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Merchant Funding</fullName>
            </value>
            <value>
                <fullName>Merchant Processing</fullName>
            </value>
            <value>
                <fullName>Merchant Cash Advance</fullName>
            </value>
            <value>
                <fullName>Small Business Loans</fullName>
            </value>
            <value>
                <fullName>Equipment Leasing</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>