unpackaged/main/default/objects/Account/fields/Initial_Product_Response__c.field-meta.xml
<CustomField>
    <fullName>Initial_Product_Response__c</fullName>
    <description>This field will capture what product a campaign targeted that a customer responded to for the first time.</description>
    <inlineHelpText>This field will capture what product a campaign targeted that a customer responded to for the first time.</inlineHelpText>
    <label>Initial Product Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>