unpackaged/main/default/objects/Account/fields/Initial_Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Channel__c</fullName>
    <description>This field will be a record of how the customer responded.</description>
    <inlineHelpText>This field will be a record of how the customer responded.  ***Do Not Change***</inlineHelpText>
    <label>Initial Response Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>