unpackaged/main/default/objects/Account/fields/Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email address for account is invalid</description>
    <inlineHelpText>Check if the email address for this account is invalid</inlineHelpText>
    <label>Invalid Email</label>
    <type>Checkbox</type>
</CustomField>