unpackaged/main/default/objects/Account/fields/Invalid_FAX__c.field-meta.xml
<CustomField>
    <fullName>Invalid_FAX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invalid FAX number</description>
    <inlineHelpText>Check if the FAX number for the customer is invalid</inlineHelpText>
    <label>Invalid FAX</label>
    <type>Checkbox</type>
</CustomField>