unpackaged/main/default/objects/Account/fields/IUSA_Score__c.field-meta.xml
<CustomField>
    <fullName>IUSA_Score__c</fullName>
    <description>Credit Rating Score from InfoUSA</description>
    <inlineHelpText>Credit Rating Score from InfoUSA</inlineHelpText>
    <label>IUSA Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>