unpackaged/main/default/objects/Account/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>This field will indicate what landing page a customer clicked on / typed in to complete a web 2 lead.</description>
    <inlineHelpText>This field will indicate what landing page a customer clicked on / typed in to complete a web 2 lead.</inlineHelpText>
    <label>Landing Page</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>