unpackaged/main/default/objects/Account/fields/Last_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Type__c</fullName>
    <description>Type of activity logged for the Last Activity Date field</description>
    <label>Last Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>