unpackaged/main/default/objects/Account/fields/Last_Mail_Date_From_Rep__c.field-meta.xml
<CustomField>
    <fullName>Last_Mail_Date_From_Rep__c</fullName>
    <formula>Sweep_Date__c -62</formula>
    <label>Last Mail Date From Rep</label>
    <type>Date</type>
</CustomField>