unpackaged/main/default/objects/Account/fields/LE_Likelihood_to_Fund_Rating__c.field-meta.xml
<CustomField>
    <fullName>LE_Likelihood_to_Fund_Rating__c</fullName>
    <description>Created to capture scores from Lattice models.</description>
    <label>LE Likelihood to Fund Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>