unpackaged/main/default/objects/Account/fields/LE_Likelihood_to_Fund_Score__c.field-meta.xml
<CustomField>
    <fullName>LE_Likelihood_to_Fund_Score__c</fullName>
    <description>Created to capture scores from Lattice models.</description>
    <label>LE Likelihood to Fund Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>