unpackaged/main/default/objects/Account/fields/Lease_Opportunities_Funded__c.field-meta.xml
<CustomField>
    <fullName>Lease_Opportunities_Funded__c</fullName>
    <description>This field is a count of all lease opportunities that have funded.</description>
    <inlineHelpText>This field is a count of all lease opportunities that have funded.</inlineHelpText>
    <label>Lease Opportunities Funded</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Lease Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>