unpackaged/main/default/objects/Account/fields/Lease_Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Lease_Propensity_Score__c</fullName>
    <label>Lease Propensity Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>