unpackaged/main/default/objects/Account/fields/Lease_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status_Reason__c</fullName>
    <label>Lease Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_Lease__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All Phone Numbers Out of Service</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Contact Deceased</fullName>
            </value>
            <value>
                <fullName>Contact No Longer with Company</fullName>
            </value>
            <value>
                <fullName>Contact Not a Decision Maker</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Requested No Contact</fullName>
            </value>
            <value>
                <fullName>Customer Unresponsive</fullName>
            </value>
            <value>
                <fullName>Customer Upset</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Funding Not Needed</fullName>
            </value>
            <value>
                <fullName>Has Non-Lease Funding</fullName>
            </value>
            <value>
                <fullName>Hung Up On</fullName>
            </value>
            <value>
                <fullName>Insufficient Funding Available</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Lender Exposure</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Out of Service</fullName>
            </value>
            <value>
                <fullName>Payment Structure</fullName>
            </value>
            <value>
                <fullName>Restricted Industry</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Tax Liens</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
            <value>
                <fullName>Time in Business</fullName>
            </value>
            <value>
                <fullName>Use of Funds</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>