unpackaged/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>the account's legal name as filed with the Secretary of State.</description>
    <externalId>true</externalId>
    <inlineHelpText>the account's legal name as filed with the Secretary of State.</inlineHelpText>
    <label>Legal Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>