unpackaged/main/default/objects/Account/fields/Legal_Name_Normal__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_Normal__c</fullName>
    <label>Legal Name Normal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>