unpackaged/main/default/objects/Account/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <description>Legal Status / Structure of the Customers Business.</description>
    <inlineHelpText>Legal Status / Structure of the Customers Business.</inlineHelpText>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>