unpackaged/main/default/objects/Account/fields/Lender_Active__c.field-meta.xml
<CustomField>
    <fullName>Lender_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this lender active with Five Point Capital?</description>
    <inlineHelpText>Is this lender active with Five Point Capital?</inlineHelpText>
    <label>Lender Active</label>
    <type>Checkbox</type>
</CustomField>