unpackaged/main/default/objects/Account/fields/Lender_Charge_Interim_Rent__c.field-meta.xml
<CustomField>
    <fullName>Lender_Charge_Interim_Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the leasing lender allow us to charge interim rent to the lessee?</description>
    <inlineHelpText>Does the leasing lender allow us to charge interim rent to the lessee?</inlineHelpText>
    <label>Lender Charge Interim Rent</label>
    <type>Checkbox</type>
</CustomField>