unpackaged/main/default/objects/Account/fields/Lender_Computation__c.field-meta.xml
<CustomField>
    <fullName>Lender_Computation__c</fullName>
    <description>what computation method does this lender use?</description>
    <inlineHelpText>what computation method does this lender use?</inlineHelpText>
    <label>Lender Computation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buy Rate Percentage</fullName>
            </value>
            <value>
                <fullName>Lease Rate Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>