unpackaged/main/default/objects/Account/fields/Lender_Credit_Pull_Type__c.field-meta.xml
<CustomField>
    <fullName>Lender_Credit_Pull_Type__c</fullName>
    <description>Identifies if a Lender pulls Credit with a hard or soft credit inquiry</description>
    <inlineHelpText>Identifies if a Lender pulls Credit with a hard or soft credit inquiry</inlineHelpText>
    <label>Lender Credit Pull Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Pull</fullName>
            </value>
            <value>
                <fullName>Hard Pull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>