unpackaged/main/default/objects/Account/fields/Lender_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Lender_Deal_Type__c</fullName>
    <label>Lender Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial draw</fullName>
            </value>
            <value>
                <fullName>Subsequent draw</fullName>
            </value>
            <value>
                <fullName>Initial renewal</fullName>
            </value>
            <value>
                <fullName>Potential renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>