unpackaged/main/default/objects/Account/fields/Lender_Discount_Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Lender_Discount_Number_of_Payments__c</fullName>
    <defaultValue>2</defaultValue>
    <description>How many payments does the lender allow us to discount?</description>
    <inlineHelpText>How many payments does the lender allow us to discount?</inlineHelpText>
    <label>Lender Discount Number of Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>