unpackaged/main/default/objects/Account/fields/Lender_Fees__c.field-meta.xml
<CustomField>
    <fullName>Lender_Fees__c</fullName>
    <description>What fees do the lender charge for originating the loan?</description>
    <inlineHelpText>What fees do the lender charge for originating the loan?</inlineHelpText>
    <label>Lender Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>