unpackaged/main/default/objects/Account/fields/Lender_Interest_Settlement_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Lender_Interest_Settlement_Criteria__c</fullName>
    <description>What criteria does the leasing lender use for computing an interest settlement?</description>
    <inlineHelpText>What criteria does the leasing lender use for computing an interest settlement?</inlineHelpText>
    <label>Lender Interest Settlement Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Equipment Cost</fullName>
            </value>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Stream Minus Lost</fullName>
            </value>
            <value>
                <fullName>Half of Interim Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>