unpackaged/main/default/objects/Account/fields/Lender_Interest_Settlement_Start__c.field-meta.xml
<CustomField>
    <fullName>Lender_Interest_Settlement_Start__c</fullName>
    <label>Lender Interest Settlement Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fund Date</fullName>
            </value>
            <value>
                <fullName>Fund Date - 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>