unpackaged/main/default/objects/Account/fields/Lender_Max_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lender_Max_Annual_Revenue__c</fullName>
    <description>Maximum Annual Revenue Lender will allow for submissions</description>
    <inlineHelpText>Maximum Annual Revenue Lender will allow for submissions</inlineHelpText>
    <label>Lender Max Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>