unpackaged/main/default/objects/Account/fields/Lender_Max_Points__c.field-meta.xml
<CustomField>
    <fullName>Lender_Max_Points__c</fullName>
    <formula>15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Max Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>