unpackaged/main/default/objects/Account/fields/Lender_Min_FICO__c.field-meta.xml
<CustomField>
    <fullName>Lender_Min_FICO__c</fullName>
    <description>Minimum FICO score a Lender will accept. Used in the automated syndication process.</description>
    <inlineHelpText>Minimum FICO score a Lender will accept. Used in the automated syndication process.</inlineHelpText>
    <label>Lender Min FICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>