unpackaged/main/default/objects/Account/fields/Lender_Points_Calc_Method__c.field-meta.xml
<CustomField>
    <fullName>Lender_Points_Calc_Method__c</fullName>
    <description>What is the lender's method of computing points?</description>
    <inlineHelpText>What is the lender's method of computing points?</inlineHelpText>
    <label>Lender Points Calc Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Advances + Stream</fullName>
            </value>
            <value>
                <fullName>Stream Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>